# yuk

./: .cz.toml  .dockerignore  .eslintrc.json  .gitignore  .prettierignore  .versionrc  Cargo.toml  Dockerfile  README.md  deno.json  docker-compose.yaml  flake.nix  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/: .eslintrc.json  .gitignore  .prettierignore  bsconfig.json  global.d.ts  package.json  tsconfig.json  vite.config.ts  webpack.config.ts
client/src/: Card.res  Config.res  Detail.res  Details.tsx  Recks.res  Settings.res  Settings.tsx  Shared.res  UI.res  UI.tsx  Utils.res  card.tsx  client.ts  config.ts  context.ts  detail.tsx  gm.js  gm.ts  index.ts  index.tsx  itertools.ts  main.ts  recks.ts  settings.tsx  shared.ts  style.mod.css  style.mod.css.d.ts  style.mod.less  style.module.less  types.ts  ui.ts  ui.tsx  utils.ts  utils.tsx  xhr.ts
client/src/utils/: It.ts  Lazy.ts  Opt.ts  Ref.ts
server/: Cargo.toml  Dockerfile
server/src/: entity.rs  error.rs  main.rs  migration.rs  rpc.rs  server.rs  types.rs
server/src/entity/: answers.rs  users.rs
server/src/migration/: m202205041451_initial.rs
server/src/server/: migration.rs
src/: Details.tsx  client.ts  gm.ts  main.ts  shared.ts  utils.tsx  vite-env.d.ts  xhr.ts
src/utils/: Opt.ts  Pipe.ts
tests/: test-server.js  test-server.ts
yuk-client/: bundle.js  bundle.ts  devDeps.ts  package.json  package.ts  tsconfig.json  webpack.config.ts
yuk-client/src/: client.ts  gm.js  index.ts  inject.ts  main.ts  msg.ts  paper.ts  style.module.css  style.module.css.d.ts  types.ts  ui.ts  utils.ts  ws.ts  xhr.js  xhr.ts
yuk-server/: Cargo.toml
yuk-server/migrations/: 20211116105725_test_db.sql  20211118052931_test_db.sql  20211119005132_test_db.sql  20211119063011_test_db.sql
yuk-server/src/: main.rs  msg.rs  msg_handler.rs  msg_server.rs  server.rs
yuk-server/src/login/: handle_conn.rs  mod.rs  msg_server.rs
