[package]
name = "yuk-server"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.0"
features = ["v4", "serde"]

[dependencies.sea-orm]
version = "0.7"
default-features = false
features = ["macros", "with-json", "runtime-tokio-native-tls", "sqlx-postgres"]

[dependencies.sea-schema]
version = "0.7"
default-features = false
features = ["migration"]

[dependencies.tokio]
version = "1.18"
features = ["full"]

[dependencies.jsonrpsee]
version = "0.11"
features = ["macros", "http-server"]
