[package]
name = "yuk-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.futures]
version = "0.3"
default-features = false

[dependencies.tokio]
version = "1.18"
features = ["full"]

[dependencies.uuid]
version = "1.0"
features = ["v4", "serde"]

[dependencies.jsonrpsee]
version = "0.11"
features = ["macros", "http-server"]

[dependencies.mongodb]
version = "2.1"
default-features = false
features = ["tokio-runtime"]
