[package]
name = "yuk-server"
version = "0.8.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
serde_json = "1.0"
async-trait = "0.1"
regex = "1.8"
once_cell = "1.17"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.futures]
version = "0.3"
default-features = false

[dependencies.tokio]
version = "1.28"
features = ["full"]

[dependencies.uuid]
version = "1.3"
features = ["v4", "serde"]

[dependencies.jsonrpsee]
# TODO: update to v0.18
version = "0.15"
features = ["macros", "http-server"]

[dependencies.mongodb]
version = "2.5"
default-features = false
features = ["tokio-runtime"]

[dependencies.shadow-rs]
version = "0.21"
default-features = false

[build-dependencies.shadow-rs]
version = "0.21"
default-features = false
