[package]
name = "yuk-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.13", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = "0.16"
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "json",
] }
dotenv = "0.15"
